actually detect if zero is the set recommendedInterval (#729)
* actually detect if zero is the set recommendedInterval

* simpliy logic

* more simplify

--- a/web/i18n/en.json
+++ b/web/i18n/en.json
@@ -767,6 +767,9 @@
   "Update every X minutes": {
     "other": "Update every X minutes"
   },
+  "recommended": {
+    "other": "recommended"
+  },
   "Display Time Seconds": {
     "other": "Display Time Seconds"
   },
